remove ProducerFactoryGenerator